#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([BiliLocal], [0.5.0], [https://github.com/vvvbbbcz/BiliLocal-ForLinux/issues])
AC_CONFIG_SRCDIR([src/Bundle.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_STRTOD
AC_CONFIG_FILES([Makefile])
AC_CHECK_FUNCS([Makefile])

AC_OUTPUT
